# scanner

./: Cargo.toml  Dockerfile
api/: Cargo.toml
api/src/: main.rs  scanner.rs
cli/: Cargo.toml
cli/src/: main.rs  sarif.rs
