[package]
name = "scanner-api"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for SAFE-MCP Scanner"

[[bin]]
name = "scanner-api"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git operations
git2 = "0.19"
tempfile = "3.10"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
