[package]
name = "cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
engine = { path = "../engine" }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde-sarif = "0.8"
